# chamferwm

./: LICENSE  README.md  meson.build
config/: config.py
man/: chamferwm.1
shaders/: chamfer.hlsl  default.hlsl  frame.hlsl  solid.hlsl  text.hlsl
share/: chamfer.desktop
src/: CompositorFont.cpp  CompositorFont.h  CompositorResource.cpp  CompositorResource.h  backend.cpp  backend.h  compositor.cpp  compositor.h  config.cpp  config.h  container.cpp  container.h  main.cpp  main.h
third/: spirv_reflect.c  spirv_reflect.h
third/glad/include/glad/: gl.h  glx.h
third/glad/src/: gl.c  glx.c
